fix(core-notification): prevent overflow of long text

--- a/packages/Notification/Notification.modules.scss
+++ b/packages/Notification/Notification.modules.scss
@@ -15,3 +15,11 @@
 .error {
   composes: error from '../../shared/styles/Messaging.modules.scss';
 }
+
+.withoutIcon {
+  width: 100%;
+}
+
+.withIcon {
+  width: calc(100% - 2.5rem);
+}
